--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
+        "laravel/socialite": "*",
         "laravel/tinker": "^2.7",
         "symfony/css-selector": "^7.4",
         "symfony/dom-crawler": "^7.4"
